--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   google_fonts: ^6.2.1
   http: ^1.2.1
+  loading_animation_widget: ^1.2.1
 
 
   # The following adds the Cupertino Icons font to your application.
