--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   flutter:
     sdk: flutter
   google_fonts: ^6.2.1
+  intl: ^0.19.0
+  http: ^1.2.1
+  geocoding: ^3.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
