--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   google_fonts: ^6.2.1
   http: ^1.2.1
   loading_animation_widget: ^1.2.1
+  geocoding: ^3.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
