--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,5 +1,3 @@
-ext.kotlin_version = '2.0.0'
-
 allprojects {
     repositories {
         google()
@@ -18,3 +16,4 @@ subprojects {
 tasks.register("clean", Delete) {
     delete rootProject.buildDir
 }
+//ext.kotlin_version = '2.0.0'
